# SolTrade

./: .env.sample  .gitignore  README.md  config.json.sample  main.py  pyproject.toml
backtesting/: backtest_default_strategy.py
soltrade/: config.py  log.py  strategy.py  trading.py  transactions.py  utils.py  wallet.py
strategies/: base_strategy.py  default_strategy.py
