[project]
name = "soltrade"
version = "2.0.0"
description = "A Solana trading bot with lots of features."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backtrader==1.9.78.123",
    "base58==2.1.1",
    "httpx==0.28.1",
    "pandas==2.3.0",
    "prompt-toolkit==3.0.51",
    "requests==2.32.4",
    "rich==13.9.4",
    "solana==0.36.7",
    "solders==0.26.0",
    "ta-lib==0.6.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
